--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@arcgis/core": "^4.24.0-next.20220429",
     "@esri/react-arcgis": "^5.1.0",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^4.2.4",
@@ -14,15 +15,17 @@
     "@types/react-dom": "^16.9.14",
     "@types/react-redux": "^7.1.23",
     "@types/three": "^0.139.0",
+    "esri-loader": "^3.5.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
-    "three": "^0.139.0",
     "typescript": "~4.1.5"
   },
   "scripts": {
+    "start_local_gis": "ncp ./node_modules/@arcgis/core/assets ./public/assets && react-scripts start",
+    "build_local_gis": "ncp ./node_modules/@arcgis/core/assets ./public/assets && react-scripts build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
